[package]
name = "relay_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
reqwest = { version = "0.11.17", features = ["blocking", "json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
did-key = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"